SET(GOBLET_calcinshape_SOURCES main.cpp)
QT5_WRAP_CPP(GOBLET_calcinshape_HEADERS_MOC)
QT5_ADD_RESOURCES(GOBLET_calcinshape_RESOURCES_RCC ${GOBLET_calcinshape_RESOURCES})

ADD_EXECUTABLE(goblet-calcinshape ${GOBLET_calcinshape_SOURCES} ${GOBLET_calcinshape_HEADERS_MOC})

IF(NOT WIN32)
  TARGET_LINK_LIBRARIES(goblet-calcinshape ${Qt5Core_LIBRARIES} ${Qt5Xml_LIBRARIES} ${Qt5Sql_LIBRARIES})
ELSE (NOT WIN32)
  TARGET_LINK_LIBRARIES(goblet-calcinshape ${Qt5Core_LIBRARIES} ${Qt5Xml_LIBRARIES} ${Qt5Sql_LIBRARIES})
ENDIF (NOT WIN32)

INSTALL_PROGRAMS(/bin FILES goblet-calcinshape)
