SET(GOBLET_createdb_SOURCES main.cpp)
QT5_WRAP_CPP(GOBLET_createdb_HEADERS_MOC)
QT5_ADD_RESOURCES(GOBLET_createdb_RESOURCES_RCC ${GOBLET_createdb_RESOURCES})

ADD_EXECUTABLE(goblet-createdb ${GOBLET_createdb_SOURCES} ${GOBLET_createdb_HEADERS_MOC} ${GOBLET_createdb_RESOURCES_RCC})

IF(NOT WIN32)
  TARGET_LINK_LIBRARIES(goblet-createdb ${Qt5Core_LIBRARIES} ${Qt5Xml_LIBRARIES} ${Qt5Sql_LIBRARIES})
ELSE (NOT WIN32)
  TARGET_LINK_LIBRARIES(goblet-createdb ${Qt5Core_LIBRARIES} ${Qt5Xml_LIBRARIES} ${Qt5Sql_LIBRARIES})
ENDIF (NOT WIN32)

INSTALL_PROGRAMS(/bin FILES goblet-createdb)
