SET(GOBLET_datasetcalc_SOURCES main.cpp)
QT5_WRAP_CPP(GOBLET_datasetcalc_HEADERS_MOC)
QT5_ADD_RESOURCES(GOBLET_datasetcalc_RESOURCES_RCC ${GOBLET_datasetcalc_RESOURCES})

ADD_EXECUTABLE(goblet-datasetcalc ${GOBLET_datasetcalc_SOURCES} ${GOBLET_datasetcalc_HEADERS_MOC})

IF(NOT WIN32)
  TARGET_LINK_LIBRARIES(goblet-datasetcalc ${Qt5Core_LIBRARIES} ${Qt5Xml_LIBRARIES} ${Qt5Sql_LIBRARIES})
  TARGET_LINK_LIBRARIES(goblet-datasetcalc ${Qt5Core_LIBRARIES} ${Qt5Xml_LIBRARIES} ${Qt5Sql_LIBRARIES})
ENDIF (NOT WIN32)

INSTALL_PROGRAMS(/bin FILES goblet-datasetcalc)
