SET(GOBLET_executesql_SOURCES main.cpp)
QT5_WRAP_CPP(GOBLET_executesql_HEADERS_MOC)
QT5_ADD_RESOURCES(GOBLET_executesql_RESOURCES_RCC ${GOBLET_executesql_RESOURCES})

ADD_EXECUTABLE(goblet-executesql ${GOBLET_executesql_SOURCES} ${GOBLET_executesql_HEADERS_MOC})

IF(NOT WIN32)
  TARGET_LINK_LIBRARIES(goblet-executesql ${Qt5Core_LIBRARIES} ${Qt5Xml_LIBRARIES} ${Qt5Sql_LIBRARIES})
ELSE (NOT WIN32)
  TARGET_LINK_LIBRARIES(goblet-executesql ${Qt5Core_LIBRARIES} ${Qt5Xml_LIBRARIES} ${Qt5Sql_LIBRARIES})
ENDIF (NOT WIN32)

INSTALL_PROGRAMS(/bin FILES goblet-executesql)
