SET(GOBLET_listdatasets_SOURCES main.cpp)
QT5_WRAP_CPP(GOBLET_listdatasets_HEADERS_MOC)
QT5_ADD_RESOURCES(GOBLET_listdatasets_RESOURCES_RCC ${GOBLET_listdatasets_RESOURCES})

ADD_EXECUTABLE(goblet-listdatasets ${GOBLET_listdatasets_SOURCES} ${GOBLET_listdatasets_HEADERS_MOC})

IF(NOT WIN32)
  TARGET_LINK_LIBRARIES(goblet-listdatasets ${Qt5Core_LIBRARIES} ${Qt5Xml_LIBRARIES} ${Qt5Sql_LIBRARIES})
ELSE (NOT WIN32)
  TARGET_LINK_LIBRARIES(goblet-listdatasets ${Qt5Core_LIBRARIES} ${Qt5Xml_LIBRARIES} ${Qt5Sql_LIBRARIES})
ENDIF (NOT WIN32)

INSTALL_PROGRAMS(/bin FILES goblet-listdatasets)
