SET(GOBLET_outputraster_SOURCES main.cpp)
QT5_WRAP_CPP(GOBLET_outputraster_HEADERS_MOC)
QT5_ADD_RESOURCES(GOBLET_outputraster_RESOURCES_RCC ${GOBLET_outputraster_RESOURCES})

ADD_EXECUTABLE(goblet-outputraster ${GOBLET_outputraster_SOURCES} ${GOBLET_outputraster_HEADERS_MOC})

IF(NOT WIN32)
  TARGET_LINK_LIBRARIES(goblet-outputraster ${Qt5Core_LIBRARIES} ${Qt5Xml_LIBRARIES} ${Qt5Sql_LIBRARIES})
ELSE (NOT WIN32)
  TARGET_LINK_LIBRARIES(goblet-outputraster ${Qt5Core_LIBRARIES} ${Qt5Xml_LIBRARIES} ${Qt5Sql_LIBRARIES})
ENDIF (NOT WIN32)

INSTALL_PROGRAMS(/bin FILES goblet-outputraster)
